--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
-project(Alcholator C CXX)
+project(Alcolator C CXX)
 
 cmake_minimum_required(VERSION 2.8.12)
 
 include(cmake/App.cmake)
 
-set(SOURCES "src/Alcholator.h"
-            "src/Alcholator.cpp"
+set(SOURCES "src/Alcolator.h"
+            "src/Alcolator.cpp"
             "src/main.cpp")
 
 add_app("${SOURCES}")
