switching view functionality complete

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set(SOURCES "src/Alcolator.h"
             "src/view_controllers/ViewController.h"
             "src/view_controllers/LoginVC.h"
             "src/view_controllers/LoginVC.cpp"
+            "src/view_controllers/MainVC.h"
+            "src/view_controllers/MainVC.cpp"
             "src/main.cpp")
 
 add_app("${SOURCES}")
