view changes and attempt to install odb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,14 @@ cmake_minimum_required(VERSION 3.3.2)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+
 include(cmake/App.cmake)
+include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
 
 set(SOURCES "src/Alcolator.h"
             "src/Alcolator.cpp"
             "src/view_controllers/ViewController.h"
+            "src/view_controllers/ViewController.cpp"
             "src/view_controllers/LoginVC.h"
             "src/view_controllers/LoginVC.cpp"
             "src/view_controllers/AdminVC.h"
@@ -18,3 +21,4 @@ set(SOURCES "src/Alcolator.h"
             "src/main.cpp")
 
 add_app("${SOURCES}")
+
