--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,23 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(cmake/App.cmake)
 include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)
 
-set(SOURCES "src/Alcolator.h"
+set(SOURCES "src/database/Database.h"
+            "src/database/Database.cpp"
+            "src/database/models/enums/AccessLevel.h"
+            "src/database/models/Model.h"
+            "src/database/models/ActionLog.h"
+            "src/database/models/ActionLog.cpp"
+            "src/database/models/Beverage.h"
+            "src/database/models/Beverage.cpp"
+            "src/database/models/Experiment.h"
+            "src/database/models/Experiment.cpp"
+            "src/database/models/Identity.h"
+            "src/database/models/Identity.cpp"
+            "src/database/models/Result.h"
+            "src/database/models/Result.cpp"
+            "src/database/models/Subject.h"
+            "src/database/models/Subject.cpp"
+            "src/Alcolator.h"
             "src/Alcolator.cpp"
             "src/view_controllers/ViewController.h"
             "src/view_controllers/ViewController.cpp"
@@ -18,12 +34,12 @@ set(SOURCES "src/Alcolator.h"
             "src/view_controllers/AdminVC.cpp"
             "src/view_controllers/MainVC.h"
             "src/view_controllers/MainVC.cpp"
+            "src/database/models/enums/AccessLevel.h"
             "src/main.cpp")
-
-add_app("${SOURCES}")
 
 find_package(SQLITE3)
 if (SQLITE3_FOUND)
   include_directories(${SQLITE3_INCLUDE_DIRS})
+  add_app("${SOURCES}")
   target_link_libraries (Alcolator ${SQLITE3_LIBRARIES})
 endif (SQLITE3_FOUND)
